Fixed spacing in mobile layout and added a media query to permanently draw the projects hover box on devices that do not support hover, i.e. mobile devices

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,5 +1,5 @@
 .post-header {
-    margin-bottom: $vertical-spacing-unit;
+    //margin-bottom: $vertical-spacing-unit;
 }
 .post-list {
     margin: 0;
@@ -16,7 +16,7 @@
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
-    margin-bottom: 10px;
+    //margin-bottom: 10px;
     margin-top: 0;
     // @include media-query($on-laptop) {
     //     font-size: 36px;
