--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -1,5 +1,5 @@
 .profile {
-	padding: $img-spacing - 10px;
+	padding-bottom: 10px;
     img {
         box-shadow: 0 0 5px $grey-color;
         width: 100%;
